@@ -32,6 +32,9 @@ dependencies{
     // Signing and encrypting pdf (not used)
     //compile group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.53'
 
+    // Documents conversion
+    implementation group: 'org.bitbucket.leito', name: 'universal-document-converter', version: '1.1.0'
+
     // JSON requests
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.12.2'
     // YAML
@@ -68,8 +71,17 @@ task packageRpm(type: Exec){
     workingDir project.projectDir
     commandLine = ["./gradlew", "jpackage", "-PinstallerType=rpm"]
 }
+
 sourceCompatibility = 14
 targetCompatibility = 14
+
+run{
+    jvmArgs = [
+            '--add-exports=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls',
+            '--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls'
+    ]
+}
+
 jlink {
     options = [
                 '--strip-debug',
@@ -79,6 +91,10 @@ jlink {
             ] as List<String>
     launcher {
         name = 'PDF4Teachers'
+        jvmArgs = [
+                '--add-exports=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls',
+                '--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls'
+        ]
     }
 
     if(Os.isFamily(Os.FAMILY_WINDOWS)){
